--- a/main..ipynb
+++ b/main..ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 165,
    "id": "457e5b31",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 166,
    "id": "64f1c1c8",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 167,
    "id": "6147f40a",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
        "[1000 rows x 2 columns]"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 168,
    "id": "6c869919",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
        "Index(['text', 'summary'], dtype='object')"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 169,
    "id": "d44b39ca",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 170,
    "id": "2b690f72",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 171,
    "id": "814de8d1",
    "metadata": {},
    "outputs": [],
@@ -283,17 +283,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 172,
    "id": "1dbd78a1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.JointGrid at 0x225968dfe30>"
+       "<seaborn.axisgrid.JointGrid at 0x22596b1fc80>"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 173,
    "id": "6e3c5c8b",
    "metadata": {},
    "outputs": [
@@ -425,7 +425,7 @@
        "max    196911.000000  4359.000000      5.294270         3.639387"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 174,
    "id": "a069f967",
    "metadata": {},
    "outputs": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 175,
    "id": "2970558d",
    "metadata": {},
    "outputs": [],
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 176,
    "id": "2d743bd0",
    "metadata": {},
    "outputs": [
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 177,
    "id": "198f04d3",
    "metadata": {},
    "outputs": [],
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 178,
    "id": "62f32a48",
    "metadata": {},
    "outputs": [
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 179,
    "id": "bb364e01",
    "metadata": {},
    "outputs": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 180,
    "id": "19fabfc6",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
        "{'version': '0.12.2'}"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 181,
    "id": "ed7d1eca",
    "metadata": {},
    "outputs": [],
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 182,
    "id": "fdc41e57",
    "metadata": {},
    "outputs": [],
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 183,
    "id": "be940240",
    "metadata": {},
    "outputs": [],
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 184,
    "id": "b5de5ff9",
    "metadata": {},
    "outputs": [
@@ -696,6 +696,282 @@
    "source": [
     "completion = get_llm_completion(prompt)\n",
     "print(prompt_template +\"\\n\\n\" + fill(completion, replace_whitespace=False)[:1000])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "id": "81da2a42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_tokens(text: str) -> int :\n",
+    "    enc = tiktoken.encoding_for_model('gpt-4o')\n",
+    "    return len(enc.encode(text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "id": "0fc7bd4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Our prompt is 25,854 tokens. \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Our prompt is {count_tokens(prompt):,} tokens. ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "id": "20e9fc9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Our prompt (135,803 characters):\n",
+      "Here is a terrific one-sentence summarry of \"## 1.1 Policy c ... e off housing nationwide.\n",
+      "\n",
+      "\": \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(show_prompt(prompt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "id": "edeae590",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Our shorter prompt is 1,362 tokens. \n",
+      "Our prompt (7,548 characters):\n",
+      "Here is a terrific one-sentence summarry of \"## 1.1 Policy c ... rdable rental housing (Mart\": \n"
+     ]
+    }
+   ],
+   "source": [
+    "shorter_prompt = prompt_template.format(doc=doc[:7_500])\n",
+    "print(f'Our shorter prompt is {count_tokens(shorter_prompt):,} tokens. ')\n",
+    "print(show_prompt(shorter_prompt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "id": "c53f004d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Okay, here’s a breakdown of the key takeaways from the text, organized\n",
+      "for clarity:\n",
+      "\n",
+      "**1. The Housing Crisis in Australia – A Complex\n",
+      "Situation**\n",
+      "\n",
+      "*   **Significant Population Gap:** Australia has a large\n",
+      "proportion of residents outside major capital cities, creating a\n",
+      "substantial rural and regional population, but a smaller population\n",
+      "overall.\n",
+      "*   **Federalism’s Impact:**  The Australian government’s\n",
+      "limited direct powers regarding housing across federation creates\n",
+      "challenges for effective regional policies.\n",
+      "*   **Existing Support:**\n",
+      "While the federal government provides financial support, it’s not\n",
+      "specifically targeting regional needs.\n",
+      "\n",
+      "**2. Key Existing Programs &\n",
+      "Initiatives**\n",
+      "\n",
+      "*   **Regional First Home Buyer Guarantee (RFHBG):**\n",
+      "Housing Australia administers this program to support regional\n",
+      "homebuyers with a 5% deposit. It’s been running for 10,000 places\n",
+      "since 2023 and has significant funding from the HAFF.\n",
+      "*   **Housing\n",
+      "Australia Future Fund (HAFF) & National Housing Accord:** T\n"
+     ]
+    }
+   ],
+   "source": [
+    "completion = get_llm_completion(shorter_prompt)\n",
+    "print(fill(completion, replace_whitespace=False)[:1000])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "id": "1689d9ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting openai\n",
+      "  Downloading openai-1.109.1-py3-none-any.whl.metadata (29 kB)\n",
+      "Requirement already satisfied: anyio<5,>=3.5.0 in c:\\users\\ce pc\\anaconda3\\lib\\site-packages (from openai) (4.2.0)\n",
+      "Requirement already satisfied: distro<2,>=1.7.0 in c:\\users\\ce pc\\anaconda3\\lib\\site-packages (from openai) (1.9.0)\n",
+      "Requirement already satisfied: httpx<1,>=0.23.0 in c:\\users\\ce pc\\anaconda3\\lib\\site-packages (from openai) (0.27.0)\n",
+      "Collecting jiter<1,>=0.4.0 (from openai)\n",
+      "  Downloading jiter-0.11.0-cp312-cp312-win_amd64.whl.metadata (5.3 kB)\n",
+      "Requirement already satisfied: pydantic<3,>=1.9.0 in c:\\users\\ce pc\\anaconda3\\lib\\site-packages (from openai) (2.8.2)\n",
+      "Requirement already satisfied: sniffio in c:\\users\\ce pc\\anaconda3\\lib\\site-packages (from openai) (1.3.0)\n",
+      "Requirement already satisfied: tqdm>4 in c:\\users\\ce pc\\anaconda3\\lib\\site-packages (from openai) (4.67.1)\n",
+      "Requirement already satisfied: typing-extensions<5,>=4.11 in c:\\users\\ce pc\\anaconda3\\lib\\site-packages (from openai) (4.14.0)\n",
+      "Requirement already satisfied: idna>=2.8 in c:\\users\\ce pc\\anaconda3\\lib\\site-packages (from anyio<5,>=3.5.0->openai) (3.7)\n",
+      "Requirement already satisfied: certifi in c:\\users\\ce pc\\anaconda3\\lib\\site-packages (from httpx<1,>=0.23.0->openai) (2025.8.3)\n",
+      "Requirement already satisfied: httpcore==1.* in c:\\users\\ce pc\\anaconda3\\lib\\site-packages (from httpx<1,>=0.23.0->openai) (1.0.2)\n",
+      "Requirement already satisfied: h11<0.15,>=0.13 in c:\\users\\ce pc\\anaconda3\\lib\\site-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai) (0.14.0)\n",
+      "Requirement already satisfied: annotated-types>=0.4.0 in c:\\users\\ce pc\\anaconda3\\lib\\site-packages (from pydantic<3,>=1.9.0->openai) (0.6.0)\n",
+      "Requirement already satisfied: pydantic-core==2.20.1 in c:\\users\\ce pc\\anaconda3\\lib\\site-packages (from pydantic<3,>=1.9.0->openai) (2.20.1)\n",
+      "Requirement already satisfied: colorama in c:\\users\\ce pc\\anaconda3\\lib\\site-packages (from tqdm>4->openai) (0.4.6)\n",
+      "Downloading openai-1.109.1-py3-none-any.whl (948 kB)\n",
+      "   ---------------------------------------- 0.0/948.6 kB ? eta -:--:--\n",
+      "   ----------- ---------------------------- 262.1/948.6 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 948.6/948.6 kB 3.4 MB/s eta 0:00:00\n",
+      "Downloading jiter-0.11.0-cp312-cp312-win_amd64.whl (203 kB)\n",
+      "Installing collected packages: jiter, openai\n",
+      "Successfully installed jiter-0.11.0 openai-1.109.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install openai\n",
+    "from openai import OpenAI\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "id": "4185e4e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm a large language model, trained by Google. I don’t have a name in\n",
+      "the traditional sense! I’m still under development. \n",
+      "\n",
+      "As for my\n",
+      "favorite color, that’s a tricky question for me – I don’t experience\n",
+      "colors like humans do! But if I had to pick one, I’d say **teal**. It\n",
+      "represents a blend of calmness and intelligence. 😊\n",
+      "\n",
+      "How about you?\n",
+      "What’s your favorite color?\n"
+     ]
+    }
+   ],
+   "source": [
+    "llm_client = OpenAI(base_url=LLM_server + \"/v1\", api_key=\"my-fake-api-key!\")\n",
+    "chat_completion = llm_client.chat.completions.create(\n",
+    "    messages=[\n",
+    "        {\"role\":\"user\",\n",
+    "        \"content\": \"what's your name, age , and favorite color?\"}\n",
+    "    ],\n",
+    "    model= MODEL,\n",
+    "    seed=0,\n",
+    ")\n",
+    "\n",
+    "print(fill(chat_completion.choices[0].message.content, replace_whitespace=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "id": "22a3802f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ask_llm(prompt: str , max_tokens: int = 500):\n",
+    "\n",
+    "    chat_completion= llm_client.chat.completions.create(\n",
+    "        messages=[{\n",
+    "            \"role\":\"user\",\n",
+    "            \"content\": prompt,\n",
+    "\n",
+    "        }],\n",
+    "        model= MODEL,\n",
+    "        max_tokens = max_tokens,\n",
+    "    )\n",
+    "    return chat_completion.choices[0].message.content , chat_completion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "id": "63db0eb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt_template= (\n",
+    "    \"Can you please write a terrific one-sentence summary of this document :\\n\\n{doc}\"\n",
+    ")\n",
+    "\n",
+    "resp, completion = ask_llm(prompt_template.format(doc=doc[:10_000]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "id": "8dbb27ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prompt tokens :1,904\n",
+      "Completion tokens :68\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Prompt tokens :{completion.usage.prompt_tokens:,}\\nCompletion tokens :{completion.usage.completion_tokens:,}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "id": "da7faaf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here's a one-sentence summary of the document:\n",
+      "\n",
+      "**The Australian\n",
+      "government’s efforts to address rural and regional housing challenges,\n",
+      "while focused on supporting local governments and community housing\n",
+      "providers, are hampered by a fragmented approach and a lack of\n",
+      "substantial investment in social housing, leading to a complex\n",
+      "interplay of policy initiatives and regional disparities.**\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(fill(resp, replace_whitespace=False))"
    ]
   }
  ],
