--- a/main..ipynb
+++ b/main..ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 207,
    "id": "457e5b31",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 208,
    "id": "64f1c1c8",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 209,
    "id": "6147f40a",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
        "[1000 rows x 2 columns]"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 210,
    "id": "6c869919",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
        "Index(['text', 'summary'], dtype='object')"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 211,
    "id": "d44b39ca",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 212,
    "id": "2b690f72",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 213,
    "id": "814de8d1",
    "metadata": {},
    "outputs": [],
@@ -283,17 +283,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 214,
    "id": "1dbd78a1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.JointGrid at 0x22596b1fc80>"
+       "<seaborn.axisgrid.JointGrid at 0x225b04ff920>"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 215,
    "id": "6e3c5c8b",
    "metadata": {},
    "outputs": [
@@ -425,7 +425,7 @@
        "max    196911.000000  4359.000000      5.294270         3.639387"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 216,
    "id": "a069f967",
    "metadata": {},
    "outputs": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 217,
    "id": "2970558d",
    "metadata": {},
    "outputs": [],
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 218,
    "id": "2d743bd0",
    "metadata": {},
    "outputs": [
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 219,
    "id": "198f04d3",
    "metadata": {},
    "outputs": [],
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 220,
    "id": "62f32a48",
    "metadata": {},
    "outputs": [
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 221,
    "id": "bb364e01",
    "metadata": {},
    "outputs": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 222,
    "id": "19fabfc6",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
        "{'version': '0.12.2'}"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 223,
    "id": "ed7d1eca",
    "metadata": {},
    "outputs": [],
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 224,
    "id": "fdc41e57",
    "metadata": {},
    "outputs": [],
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 225,
    "id": "be940240",
    "metadata": {},
    "outputs": [],
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 226,
    "id": "b5de5ff9",
    "metadata": {},
    "outputs": [
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 227,
    "id": "81da2a42",
    "metadata": {},
    "outputs": [],
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 228,
    "id": "0fc7bd4e",
    "metadata": {},
    "outputs": [
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 229,
    "id": "20e9fc9e",
    "metadata": {},
    "outputs": [
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 230,
    "id": "edeae590",
    "metadata": {},
    "outputs": [
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 231,
    "id": "c53f004d",
    "metadata": {},
    "outputs": [
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 232,
    "id": "1689d9ce",
    "metadata": {},
    "outputs": [
@@ -825,13 +825,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting openai\n",
-      "  Downloading openai-1.109.1-py3-none-any.whl.metadata (29 kB)\n",
+      "Requirement already satisfied: openai in c:\\users\\ce pc\\anaconda3\\lib\\site-packages (1.109.1)\n",
       "Requirement already satisfied: anyio<5,>=3.5.0 in c:\\users\\ce pc\\anaconda3\\lib\\site-packages (from openai) (4.2.0)\n",
       "Requirement already satisfied: distro<2,>=1.7.0 in c:\\users\\ce pc\\anaconda3\\lib\\site-packages (from openai) (1.9.0)\n",
       "Requirement already satisfied: httpx<1,>=0.23.0 in c:\\users\\ce pc\\anaconda3\\lib\\site-packages (from openai) (0.27.0)\n",
-      "Collecting jiter<1,>=0.4.0 (from openai)\n",
-      "  Downloading jiter-0.11.0-cp312-cp312-win_amd64.whl.metadata (5.3 kB)\n",
+      "Requirement already satisfied: jiter<1,>=0.4.0 in c:\\users\\ce pc\\anaconda3\\lib\\site-packages (from openai) (0.11.0)\n",
       "Requirement already satisfied: pydantic<3,>=1.9.0 in c:\\users\\ce pc\\anaconda3\\lib\\site-packages (from openai) (2.8.2)\n",
       "Requirement already satisfied: sniffio in c:\\users\\ce pc\\anaconda3\\lib\\site-packages (from openai) (1.3.0)\n",
       "Requirement already satisfied: tqdm>4 in c:\\users\\ce pc\\anaconda3\\lib\\site-packages (from openai) (4.67.1)\n",
@@ -842,14 +840,7 @@
       "Requirement already satisfied: h11<0.15,>=0.13 in c:\\users\\ce pc\\anaconda3\\lib\\site-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai) (0.14.0)\n",
       "Requirement already satisfied: annotated-types>=0.4.0 in c:\\users\\ce pc\\anaconda3\\lib\\site-packages (from pydantic<3,>=1.9.0->openai) (0.6.0)\n",
       "Requirement already satisfied: pydantic-core==2.20.1 in c:\\users\\ce pc\\anaconda3\\lib\\site-packages (from pydantic<3,>=1.9.0->openai) (2.20.1)\n",
-      "Requirement already satisfied: colorama in c:\\users\\ce pc\\anaconda3\\lib\\site-packages (from tqdm>4->openai) (0.4.6)\n",
-      "Downloading openai-1.109.1-py3-none-any.whl (948 kB)\n",
-      "   ---------------------------------------- 0.0/948.6 kB ? eta -:--:--\n",
-      "   ----------- ---------------------------- 262.1/948.6 kB ? eta -:--:--\n",
-      "   ---------------------------------------- 948.6/948.6 kB 3.4 MB/s eta 0:00:00\n",
-      "Downloading jiter-0.11.0-cp312-cp312-win_amd64.whl (203 kB)\n",
-      "Installing collected packages: jiter, openai\n",
-      "Successfully installed jiter-0.11.0 openai-1.109.1\n"
+      "Requirement already satisfied: colorama in c:\\users\\ce pc\\anaconda3\\lib\\site-packages (from tqdm>4->openai) (0.4.6)\n"
      ]
     }
    ],
@@ -860,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 233,
    "id": "4185e4e3",
    "metadata": {},
    "outputs": [
@@ -897,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 234,
    "id": "22a3802f",
    "metadata": {},
    "outputs": [],
@@ -918,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 235,
    "id": "63db0eb9",
    "metadata": {},
    "outputs": [],
@@ -932,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 236,
    "id": "8dbb27ce",
    "metadata": {},
    "outputs": [
@@ -941,7 +932,7 @@
      "output_type": "stream",
      "text": [
       "Prompt tokens :1,904\n",
-      "Completion tokens :68\n"
+      "Completion tokens :66\n"
      ]
     }
    ],
@@ -951,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 237,
    "id": "da7faaf8",
    "metadata": {},
    "outputs": [
@@ -959,14 +950,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Here's a one-sentence summary of the document:\n",
+      "Here’s a one-sentence summary of the document:\n",
       "\n",
       "**The Australian\n",
-      "government’s efforts to address rural and regional housing challenges,\n",
-      "while focused on supporting local governments and community housing\n",
-      "providers, are hampered by a fragmented approach and a lack of\n",
-      "substantial investment in social housing, leading to a complex\n",
-      "interplay of policy initiatives and regional disparities.**\n"
+      "government’s efforts to address rural and regional housing challenges\n",
+      "are complex, utilizing a mix of financial support, targeted programs,\n",
+      "and regional initiatives, particularly focusing on supporting local\n",
+      "governments’ roles in stimulating housing supply and affordability in\n",
+      "diverse locations across the country.**\n"
      ]
     }
    ],
